--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "gray-matter": "^4.0.3",
     "next": "14.2.11",
     "octokit": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "remark": "^15.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
