--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
     "start": "next start",
-    "lint": "next lint"
+    "deploy:dev": "npx sst deploy --stage dev",
+    "deploy:prod": "npx sst deploy --stage production",
+    "deploy:remove": "npx sst remove --stage production"
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
@@ -29,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8.4.47",
+    "sst": "^3.4.32",
     "tailwindcss": "^3.4.12",
     "typescript": "^5"
   }
