--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.7",
+    "framer-motion": "^12.7.4",
     "gray-matter": "^4.0.3",
     "next": "14.2.11",
     "octokit": "^4.0.2",
