--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.7.4",
     "gray-matter": "^4.0.3",
     "next": "14.2.11",
+    "next-pwa": "^5.6.0",
     "octokit": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +26,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
