chore: SCF Deploy 설정 추가 및 기존 파일 정리
SCF Deploy를 위한 새로운 구성 파일(scf.config.ts)을 추가하고, .gitignore에 배포 상태 추적을 위한 항목을 추가했습니다. 또한, package.json에서 버전을 1.0.0으로 업데이트하고, 배포 스크립트를 수정하여 SST 대신 SCF Deploy를 사용하도록 변경했습니다. 불필요한 sst 관련 파일을 삭제하여 프로젝트 구조를 간소화했습니다.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ next-env.d.ts
 /public/workbox-*.js
 /public/sw.js.map
 /public/workbox-*.js.map
+
+# SCF Deploy state (local deployment tracking)
+.deploy/
