--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "blog",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "deploy:dev": "npx sst deploy --stage dev",
-    "deploy:prod": "npx sst deploy --stage production",
-    "deploy:remove": "npx sst remove --stage production"
+    "deploy": "npx scf-deploy deploy",
+    "deploy:remove": "npx scf-deploy remove"
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
@@ -23,6 +22,7 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "remark": "^15.0.1",
+    "scf-deploy": "^0.6.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -35,7 +35,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8.4.47",
-    "sst": "^3.4.32",
     "tailwindcss": "^3.4.12",
     "typescript": "^5"
   },
